fixed margin issue on mobile skills

--- a/style.css
+++ b/style.css
@@ -397,6 +397,10 @@ a {
     flex-direction: column;
     text-align: center;
   }
+
+  .flex-section-skills-container {
+    margin-top: 5rem;
+  }
 }
 
 @media screen and (max-width: 500px) {
